Ported 561 code for sphere and cube intersection and diffuse ray scattering

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,10 @@ set(SOURCE_FILES
     "preview.cpp"
     "utilities.cpp"
     "utilities.h"
+	"common.h"
+	"materialFunctions.h"
+	"samplingFunctions.h"
+	"shapeFunctions.h"
     )
 
 cuda_add_library(src
