Finished part 1, adding obj loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 set(EXTERNAL "external")
 include_directories("${EXTERNAL}")
 include_directories("${EXTERNAL}/include")
+include_directories("${EXTERNAL}/include/tinyobjloader")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/osx")
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
