--- a/stream_compaction/CMakeLists.txt
+++ b/stream_compaction/CMakeLists.txt
@@ -1,4 +1,8 @@
 set(SOURCE_FILES
+        "common.cu"
+        "common.h"
+        "efficient_sm.cu"
+        "efficient_sm.h"
     )
 
 cuda_add_library(stream_compaction
