--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,6 @@ add_custom_command(
     TARGET ${CMAKE_PROJECT_NAME}
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/shaders
-        ${CMAKE_BINARY_DIR}/shaders
+        #${CMAKE_SOURCE_DIR}/shaders
+        #${CMAKE_BINARY_DIR}/shaders
     )
