--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ endif()
 include_directories(.)
 #add_subdirectory(stream_compaction)  # TODO: uncomment if using your stream compaction
 add_subdirectory(src)
+add_subdirectory(tinyobjloader)
 
 cuda_add_executable(${CMAKE_PROJECT_NAME}
     "src/main.h"
@@ -83,6 +84,7 @@ cuda_add_executable(${CMAKE_PROJECT_NAME}
 target_link_libraries(${CMAKE_PROJECT_NAME}
     src
     #stream_compaction  # TODO: uncomment if using your stream compaction
+	tinyobj
     ${CORELIBS}
     )
 
