--- a/.gitignore
+++ b/.gitignore
@@ -513,7 +513,7 @@ local.properties
 .externalToolBuilders/
 
 # Locally stored "Eclipse launch configurations"
-#*.launch
+*.launch
 
 # CDT-specific
 #.cproject
