--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,9 +15,11 @@ set(SOURCE_FILES
     "preview.cpp"
     "utilities.cpp"
     "utilities.h"
+	"common.h"
+	"common.cu"
     )
 
 cuda_add_library(src
     ${SOURCE_FILES}
-    OPTIONS -arch=sm_20
+    OPTIONS -arch=sm_60
     )
