--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ list(APPEND CMAKE_LIBRARY_PATH "${EXTERNAL_LIB_PATH}")
 set(GLFW_INCLUDE_DIR "${EXTERNAL}/include")
 set(GLFW_LIBRARY_DIR "${CMAKE_LIBRARY_PATH}")
 find_library(GLFW_LIBRARY "glfw3" HINTS "${GLFW_LIBRARY_DIR}")
-find_library(TINY_OBJ_LOADER_LIBRARY "tinyobjloader" HINTS "${CMAKE_LIBRARY_PATH}")
+#find_library(TINY_OBJ_LOADER_LIBRARY "tinyobjloader" HINTS "${CMAKE_LIBRARY_PATH}")
 
 set(GLEW_INCLUDE_DIR "${EXTERNAL}/include")
 set(GLEW_LIBRARY_DIR "${CMAKE_LIBRARY_PATH}")
@@ -37,7 +37,7 @@ set(CORELIBS
     "${GLFW_LIBRARY}"
     "${OPENGL_LIBRARY}"
     "${GLEW_LIBRARY}"
-	"${TINYOBJLOADER_LIBRARY}"
+	#"${TINYOBJLOADER_LIBRARY}"
     )
 
 # Enable C++11 for host code
